--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<title>GROCERY ASSISTANT</title>
+<title>Grocery Assistant</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="keywords" content="" />
@@ -74,7 +74,7 @@
 
 		<ul class="side_nav">
           
-                    <li><a href="home.html" ><span>Home</span></a></li>
+                    <li><a href="index.html" ><span>Home</span></a></li>
                     <li><a href="about.html"><span>About</span></a></li>
                     <li><a href="store.html" ><span>Find Store</span></a></li>
                     <li><a href="map.html" ><span>List Map</span></a></li>
@@ -109,7 +109,7 @@
             <script type="text/javascript"></script>
  <div class="contact" id="contact">
         <div  style="color:black;">
-            <div style="height: 100%; margin-left:10%; margin-top:15%; margin-bottom: 10%;">
+            <div style="height: 100%; margin-left:7%; margin-top:15%; margin-bottom: 10%;">
                 <div class="contact-top">
                     <h3>Contact Us</h3>
                 </div>
