--- a/map.html
+++ b/map.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<title>GROCERY ASSISTANT</title>
+<title>Grocery Assistant</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="keywords" content="" />
@@ -74,7 +74,7 @@
 
 			<ul class="side_nav">
           
-                    <li><a href="home.html" ><span>Home</span></a></li>
+                    <li><a href="index.html" ><span>Home</span></a></li>
                     <li><a href="about.html"><span>About</span></a></li>
                     <li><a href="store.html" ><span>Find Store</span></a></li>
                     <li><a href="map.html" ><span>List Map</span></a></li>
@@ -94,7 +94,7 @@
         <main role="main">
 
 		<div style="margin:10%; width: 60%;">
-			<h2>Map Result</h2>
+			<h2>Item location on map</h2>
 			<img src="./resources/images/mapp" style="margin-left:10%; margin-top:2%;">
 		</div>
 	<!--start-inner-content-->
