--- a/home.html
+++ b/home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<title>GROCERY ASSISTANT</title>
+<title>Grocery Assistant</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="keywords" content="" />
@@ -11,22 +11,16 @@
 <link href='https://fonts.googleapis.com/css?family=Open+Sans:700,700italic,800,300,300italic,400italic,400,600,600italic' rel='stylesheet' type='text/css'>
 <link href='https://fonts.googleapis.com/css?family=Playfair+Display:400,700,400italic' rel='stylesheet' type='text/css'>
 <!--Custom-Theme-files-->
-	<link href="resources/css/css/style1.css" rel='stylesheet' type='text/css' />	
-		<link href="resources/css/css/component.css" rel='stylesheet' type='text/css' />	
-		<link href="resources/css/css/nav.css" rel='stylesheet' type='text/css' />	
-		<link rel="apple-touch-icon" sizes="76x76" href="resources/images/img/apple-icon.png" />
-	<link rel="icon" type="image/png" href="resource/images/img/favicon.png" />
+<link href="resources/css/css/style1.css" rel='stylesheet' type='text/css' />	
+<link href="resources/css/css/component.css" rel='stylesheet' type='text/css' />	
+<link href="resources/css/css/nav.css" rel='stylesheet' type='text/css' />	
+<link rel="apple-touch-icon" sizes="76x76" href="resources/images/img/apple-icon.png" />
+<link rel="icon" type="image/png" href="resource/images/img/favicon.png" />
 
-	<!--     Fonts and icons     -->
-	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons" />
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" />
-
-	<!-- CSS Files -->
-
-
-	<!-- CSS Just for demo purpose, don't include it in your project -->
-
-	<script src="resources/js/js/jquery.min.js"> </script>
+<!--     Fonts and icons     -->
+<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons" />
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" />
+<script src="resources/js/js/jquery.min.js"> </script>
 <!--/script-->
 <script src="resources/js/js/modernizr.custom.js"> </script>
 <script type="text/javascript" src="resources/js/js/move-top.js"></script>
@@ -53,7 +47,7 @@
 		<!---->
 <!--animate-->
 <link href="resources/css/css/animate.css" rel="stylesheet" type="text/css" media="all">
-<script src="resources/js/js/wow.min.js"></script>
+<!-- <script src="resources/js/js/wow.min.js"></script>
 	<script>
 		 new WOW().init();
 	</script>
@@ -74,7 +68,7 @@
 
 		<ul class="side_nav">
           
-                    <li><a href="home.html" ><span>Home</span></a></li>
+                    <li><a href="index.html" ><span>Home</span></a></li>
                     <li><a href="about.html"><span>About</span></a></li>
                     <li><a href="store.html" ><span>Find Store</span></a></li>
                     <li><a href="map.html" ><span>List Map</span></a></li>
@@ -92,7 +86,7 @@
 			<div class="content">
                 <div id="large-header" class="large-header">
                     <canvas id="demo-canvas"></canvas>
-                    <h1 class="main-title"><a class="link link--takiri" href="index.html">Find your Product</a></h1>
+                    <h1 class="main-title"><a class="link link--takiri" href="home.html">Grocery Store Assistant</a></h1>
 				
                 </div>
 
@@ -107,9 +101,11 @@
 		
     </main>
 	   <!--copy-right-->
+	   <footer>
 		<div class="copy">
 		    <p class="wow fadeInUp animated animated" data-wow-delay=".5s">Copyright &copy; 2018 | Designed by Amit R. Bathija; Nan Xia; Prajna Boppana; Zijiang Zhao; Supriya Jha   </p>
 		</div>
+		</footer>
 	 <!--//copy-right-->
 		<!--//footer-->
 			<!--start-smooth-scrolling-->
@@ -129,10 +125,6 @@
 									});
 								</script>
 		<a href="#home" id="toTop" class="scroll" style="display: block;"> <span id="toTopHover" style="opacity: 1;"> </span></a>
-
-
-
-
 
 		<script>
 function form1(evt, type) {
@@ -158,11 +150,5 @@ function form1(evt, type) {
  <script src="resources/js/js/jquery-2.2.4.min.js" type="text/javascript"></script>
 	<script src="resources/js/js/bootstrap.min.js" type="text/javascript"></script>
 	<script src="resources/js/js/jquery.bootstrap.js" type="text/javascript"></script>
-
-
-
-
-
-
 </body>
 </html>
